tests/NormalTests/paczka1/small_fuzzy/37940260.err
Error in line 6: oeVGiy19o S831 87,8
Error in line 10: wNFBRQ A407 52,8
